--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -9,6 +9,8 @@ $container-padding-x: 1.5rem;
 $font-family-base: 'Barlow', sans-serif;
 $headings-font-family: 'Fraunces', serif;
 
+$line-height-base: 1.6;
+
 $h1-font-size: 4.5rem;
-$h2-font-size: 2rem;
+$h2-font-size: 2.5rem;
 $h3-font-size: 1.875rem;
