--- a/src/scss/components/_base.scss
+++ b/src/scss/components/_base.scss
@@ -3,7 +3,8 @@ body {
 }
 
 h1,
-h2 {
+h2,
+h3 {
     font-weight: 900;
 }
 
@@ -69,5 +70,44 @@ h2 {
 .more-link--red {
     &::after {
         background-color: $red;
+    }
+}
+
+// .col-bg {
+//     background-size: cover;
+//     background-repeat: no-repeat;
+//     background-position: top center;
+
+//     .ratio-1x1 {
+//         @include media-breakpoint-up(md) {
+//             --bs-aspect-ratio: 83.3333%; // 6x5
+//         }
+//     }
+// }
+
+.col-image {
+    position: relative;
+}
+
+.col-image__text {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 12% 6%;
+    text-align: center;
+
+    @include media-breakpoint-up(md) {
+        padding: 6%;
+
+        h3 {
+            font-size: 1.875rem;
+        }
+
+        p {
+            max-width: 350px;
+            margin-left: auto;
+            margin-right: auto;
+        }
     }
 }
