--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -4,6 +4,14 @@ $dark-desaturated-cyan: hsl(167, 40%, 24%); // (graphic design text)
 $dark-blue: hsl(198, 62%, 26%); // (photography text)
 $dark-moderate-cyan: hsl(168, 34%, 41%); // (footer)
 
+$theme-colors: (
+  "primary": $red,
+  "secondary": $yellow,
+  "dark-desaturated-cyan": $dark-desaturated-cyan,
+  "dark-blue": $dark-blue,
+  "dark-moderate-cyan": $dark-moderate-cyan,
+);
+
 $container-padding-x: 1.5rem;
 
 $font-family-base: 'Barlow', sans-serif;
@@ -13,4 +21,4 @@ $line-height-base: 1.6;
 
 $h1-font-size: 4.5rem;
 $h2-font-size: 2.5rem;
-$h3-font-size: 1.875rem;
+$h3-font-size: 2.125rem;
