--- a/src/scss/components/_base.scss
+++ b/src/scss/components/_base.scss
@@ -32,7 +32,7 @@ h3 {
     font-weight: 900;
     display: inline-block;
     padding: 1rem 0;
-    color: $black;
+    color: $very-dark-desaturated-blue;
     text-transform: uppercase;
     letter-spacing: 0.0625rem;
     text-decoration: none;
