--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -4,6 +4,13 @@ $dark-desaturated-cyan: hsl(167, 40%, 24%); // (graphic design text)
 $dark-blue: hsl(198, 62%, 26%); // (photography text)
 $dark-moderate-cyan: hsl(168, 34%, 41%); // (footer)
 
+$very-dark-desaturated-blue: hsl(212, 27%, 19%); // (headings-color)
+$very-dark-grayish-blue: hsl(213, 9%, 39%); // (text-muted)
+$dark-grayish-blue: hsl(232, 10%, 55%);
+$grayish-blue: hsl(210, 4%, 67%);
+
+$text-muted: $very-dark-grayish-blue;
+
 $theme-colors: (
   "primary": $red,
   "secondary": $yellow,
@@ -16,9 +23,11 @@ $container-padding-x: 1.5rem;
 
 $font-family-base: 'Barlow', sans-serif;
 $headings-font-family: 'Fraunces', serif;
+$headings-color: $very-dark-desaturated-blue;
 
 $line-height-base: 1.6;
 
 $h1-font-size: 4.5rem;
 $h2-font-size: 2.5rem;
 $h3-font-size: 2.125rem;
+$h6-font-size: 1.125rem;
