--- a/src/scss/components/_base.scss
+++ b/src/scss/components/_base.scss
@@ -24,6 +24,10 @@ h3 {
     max-width: 450px;
     margin-left: auto;
     margin-right: auto;
+
+    p {
+        color: $dark-grayish-blue;
+    }
 }
 
 .more-link {
@@ -72,18 +76,6 @@ h3 {
         background-color: $red;
     }
 }
-
-// .col-bg {
-//     background-size: cover;
-//     background-repeat: no-repeat;
-//     background-position: top center;
-
-//     .ratio-1x1 {
-//         @include media-breakpoint-up(md) {
-//             --bs-aspect-ratio: 83.3333%; // 6x5
-//         }
-//     }
-// }
 
 .col-image {
     position: relative;
