--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -30,6 +30,9 @@
 }
 
 .header__logo {
+    width: 125px;
+    height: auto;
+
     @include media-breakpoint-up(lg) {
         width: 170px;
     }
