--- a/src/scss/components/_base.scss
+++ b/src/scss/components/_base.scss
@@ -17,13 +17,21 @@ h3 {
 }
 
 .p-10 {
-    padding: 15% 10% 10%;
+    padding: 15% 6% 10%;
+    
+    @include media-breakpoint-up(sm) {
+        padding: 20% 10% 15%;
+    }
 }
 
 .col-inner {
     max-width: 450px;
     margin-left: auto;
     margin-right: auto;
+
+    h2 {
+        font-size: 1.875rem;
+    }
 
     p {
         color: $dark-grayish-blue;
