--- a/src/scss/components/_testimonials.scss
+++ b/src/scss/components/_testimonials.scss
@@ -21,16 +21,21 @@
     }
 }
 
+.testimonials-row > div + div {
+    margin-top: 3.75rem;
+
+    @include media-breakpoint-up(lg) {
+        margin-top: 0;
+    }
+}
+
 .testimonial {
     font-size: 1.125rem;
     text-align: center;
     max-width: 330px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 3.75rem;
+    margin: 0 auto;
 
     @include media-breakpoint-up(lg) {
-        margin-bottom: 0;
         max-width: 360px;
     }
 
