Add styles for image gallery above footer

--- a/src/scss/components/_base.scss
+++ b/src/scss/components/_base.scss
@@ -111,3 +111,15 @@ h3 {
         }
     }
 }
+
+.gallery {
+    .ratio-1x1 {
+        @include media-breakpoint-up(lg) {
+            --bs-aspect-ratio: 124.1666%;
+        }
+    }
+
+    img {
+        object-fit: cover;
+    }
+}
