--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -3,6 +3,8 @@ $yellow: hsl(51, 100%, 49%);
 $dark-desaturated-cyan: hsl(167, 40%, 24%); // (graphic design text)
 $dark-blue: hsl(198, 62%, 26%); // (photography text)
 $dark-moderate-cyan: hsl(168, 34%, 41%); // (footer)
+$medium-moderate-cyan: hsl(168, 45%, 32%);
+$light-moderate-cyan: hsl(168, 41%, 71%); // (footer bg)
 
 $very-dark-desaturated-blue: hsl(212, 27%, 19%); // (headings-color)
 $very-dark-grayish-blue: hsl(213, 9%, 39%); // (text-muted)
