--- a/src/scss/components/_base.scss
+++ b/src/scss/components/_base.scss
@@ -22,6 +22,16 @@ h3 {
     @include media-breakpoint-up(sm) {
         padding: 20% 10% 15%;
     }
+
+    @include media-breakpoint-up(lg) {
+        padding: 18% 2% 15% 10%;
+    }
+}
+
+.p-10--right {
+    @include media-breakpoint-up(lg) {
+        padding: 19% 10% 15% 2%;
+    }   
 }
 
 .col-inner {
@@ -31,6 +41,10 @@ h3 {
 
     h2 {
         font-size: 1.875rem;
+
+        @include media-breakpoint-up(lg) {
+            font-size: 2.5rem;
+        }
     }
 
     p {
@@ -43,7 +57,8 @@ h3 {
     font-size: 1rem;
     font-weight: 900;
     display: inline-block;
-    padding: 1rem 0;
+    margin-top: 0.75rem;
+    padding: 1rem 0.375rem;
     color: $very-dark-desaturated-blue;
     text-transform: uppercase;
     letter-spacing: 0.0625rem;
@@ -58,8 +73,8 @@ h3 {
         border-radius: 5px;
         position: absolute;
         bottom: 1rem;
-        left: -0.375rem;
-        right: -0.375rem;
+        left: 0;
+        right: 0;
         opacity: 0.4;
         transition: opacity 0.15s ease-in-out;
     }
