--- a/src/scss/components/_testimonials.scss
+++ b/src/scss/components/_testimonials.scss
@@ -4,6 +4,10 @@
     @include media-breakpoint-up(md) {
         padding: 10% 0;
     }
+
+    @include media-breakpoint-up(lg) {
+        padding: 8% 0;
+    }
 }
 
 .testimonials-heading {
