--- a/src/scss/components/_testimonials.scss
+++ b/src/scss/components/_testimonials.scss
@@ -6,7 +6,11 @@
     }
 
     @include media-breakpoint-up(lg) {
-        padding: 8% 0;
+        padding: 11% 0;
+    }
+
+    .container {
+        max-width: 1170px;
     }
 }
 
@@ -20,7 +24,7 @@
     margin-bottom: 3.75rem;
 
     @include media-breakpoint-up(sm) {
-        font-size: 1.25rem;
+        font-size: 1.375rem;
         margin-bottom: 5rem;
     }
 }
@@ -52,6 +56,7 @@
     }
 
     blockquote {
+        line-height: 1.7;
         color: $text-muted;
         margin-bottom: 2rem;
 
