--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -51,12 +51,14 @@
 }
 
 .attribution {
-    font-size: 11px; text-align: center;
+    font-size: 0.75rem;
+    text-align: center;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
 
     a {
-        color: hsl(228, 45%, 44%);
+        color: $medium-moderate-cyan;
+        text-decoration: underline;
     }
 }
