--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -5,6 +5,7 @@
 
     @include media-breakpoint-up(lg) {
         background-image: url('../images/desktop/image-header.jpg');
+        height: 100vh;
     }
 }
 
@@ -171,5 +172,26 @@
     @include media-breakpoint-up(lg) {
         font-size: 3.375rem;
         margin-bottom: 6.5rem;
+    }
+}
+
+.header__arrow {
+    display: inline-block;
+    background: none;
+    border: 0;
+    padding: 0;
+    width: 100px;
+
+    &:hover,
+    &:focus {
+        img {
+            transform: translate3d(0, 1rem, 0);
+        }
+    }
+
+    img {
+        width: 36px;
+        height: 114px;
+        transition: transform 1s;
     }
 }
